[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scripts/components/custom_panel.gd" id="1_0a1b3"]

[node name="CustomPanel" type="Panel"]
custom_minimum_size = Vector2(200, 150)
script = ExtResource("1_0a1b3")
panel_title = ""
auto_show = false

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
text = "Panel Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_bottom = -10.0
offset_left = 10.0
offset_right = -10.0 